@@ -1,7 +1,7 @@
 // Copyright 2002-2014, University of Colorado Boulder
 
 /**
- * Graph indicator that points to the value for H2O (water).
+ * Graph indicator that points to the value for H3O+ (hydronium).
  *
  * @author Chris Malley (PixelZoom, Inc.)
  */
@@ -10,8 +10,8 @@ define( function( require ) {
 
   // imports
   var inherit = require( 'PHET_CORE/inherit' );
-  var GraphIndicatorNode = require( 'PH_SCALE/common/view/GraphIndicatorNode' );
-  var H2OMoleculeNode = require( 'PH_SCALE/common/view/H2OMoleculeNode' );
+  var GraphIndicatorNode = require( 'PH_SCALE/common/view/graph/GraphIndicatorNode' );
+  var H3OMoleculeNode = require( 'PH_SCALE/common/view/H3OMoleculeNode' );
   var HTMLText = require( 'SCENERY/nodes/HTMLText' );
   var PhetFont = require( 'SCENERY_PHET/PhetFont' );
   var PHScaleColors = require( 'PH_SCALE/common/PHScaleColors' );
@@ -23,11 +23,11 @@ define( function( require ) {
    * @constructor
    */
   function H2OIndicatorNode( solution, options ) {
-    options.pointerLocation = 'bottomLeft';
+    options.pointerLocation = 'topRight';
     var thisNode = this;
-    var valueProperty = new Property( 55 ); //TODO compute initial value
-    var labelNode = new HTMLText( 'H<sub>2</sub>O', { font: new PhetFont( 28 ), fill: 'white' } );
-    GraphIndicatorNode.call( thisNode, valueProperty, new H2OMoleculeNode(), labelNode, PHScaleColors.H2O_BACKGROUND, options );
+    var valueProperty = new Property( 0.000000000000012 ); //TODO compute initial value
+    var labelNode = new HTMLText( 'H<sub>3</sub>O<sup>+</sup>', { font: new PhetFont( 28 ), fill: 'white' } );
+    GraphIndicatorNode.call( thisNode, valueProperty, new H3OMoleculeNode(), labelNode, PHScaleColors.ACIDIC, options );
     //TODO update valueProperty when solution changes
   }
 
