@@ -11,10 +11,10 @@ define( function( require ) {
   // imports
   var ABSwitch = require( 'PH_SCALE/common/view/ABSwitch' );
   var Dimension2 = require( 'DOT/Dimension2' );
-  var GraphScale = require( 'PH_SCALE/common/view/GraphScale' );
-  var GraphUnits = require( 'PH_SCALE/common/view/GraphUnits' );
+  var GraphScale = require( 'PH_SCALE/common/view/graph/GraphScale' );
+  var GraphUnits = require( 'PH_SCALE/common/view/graph/GraphUnits' );
   var inherit = require( 'PHET_CORE/inherit' );
-  var LogConcentrationGraph = require( 'PH_SCALE/common/view/LogConcentrationGraph' );
+  var LogConcentrationGraph = require( 'PH_SCALE/common/view/graph/LogConcentrationGraph' );
   var Node = require( 'SCENERY/nodes/Node' );
   var PhetFont = require( 'SCENERY_PHET/PhetFont' );
   var Rectangle = require( 'SCENERY/nodes/Rectangle' );
