@@ -18,8 +18,8 @@ define( function( require ) {
   var DropperNode = require( 'PH_SCALE/common/view/DropperNode' );
   var ExpandCollapseBar = require( 'PH_SCALE/common/view/ExpandCollapseBar' );
   var FaucetFluidNode = require( 'PH_SCALE/common/view/FaucetFluidNode' );
-  var GraphScale = require( 'PH_SCALE/common/view/GraphScale' );
-  var GraphUnits = require( 'PH_SCALE/common/view/GraphUnits' );
+  var GraphScale = require( 'PH_SCALE/common/view/graph/GraphScale' );
+  var GraphUnits = require( 'PH_SCALE/common/view/graph/GraphUnits' );
   var inherit = require( 'PHET_CORE/inherit' );
   var MoleculeCountNode = require( 'PH_SCALE/common/view/MoleculeCountNode' );
   var Node = require( 'SCENERY/nodes/Node' );
